crates/unstave-report/tests/snapshots/terminal_renderer__report_bare-barrel-import.snap
---
source: crates/unstave-report/tests/terminal_renderer.rs
expression: rendered
---
┌───────────────────────┬───────┐
│ metric                ┆ value │
╞═══════════════════════╪═══════╡
│ files analyzed        ┆ 5     │
├╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌┤
│ packages              ┆ 1     │
├╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌┤
│ modules               ┆ 5     │
├╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌┤
│ edges                 ┆ 5     │
├╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌┤
│ external packages     ┆ 0     │
├╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌┤
│ unresolved specifiers ┆ 0     │
├╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌┤
│ cycles                ┆ 0     │
├╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌┤
│ dead exports          ┆ 4     │
└───────────────────────┴───────┘

No cycles.

Dead exports
┌──────────────────────┬─────────────┬────────────────────────────────────────────────────┐
│ module               ┆ export      ┆ confidence                                         │
╞══════════════════════╪═════════════╪════════════════════════════════════════════════════╡
│ src/main.ts          ┆ boot        ┆ high                                               │
├╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┤
│ src/widgets/one.ts   ┆ OneWidget   ┆ low — touched by export */namespace/dynamic import │
├╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┤
│ src/widgets/three.ts ┆ ThreeWidget ┆ low — touched by export */namespace/dynamic import │
├╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┤
│ src/widgets/two.ts   ┆ TwoWidget   ┆ low — touched by export */namespace/dynamic import │
└──────────────────────┴─────────────┴────────────────────────────────────────────────────┘

Fan-in (most depended upon)
┌──────────────────────┬────────┬────────────┐
│ module               ┆ direct ┆ transitive │
╞══════════════════════╪════════╪════════════╡
│ src/widgets/one.ts   ┆ 1      ┆ 2          │
├╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌┤
│ src/widgets/three.ts ┆ 1      ┆ 2          │
├╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌┤
│ src/widgets/two.ts   ┆ 1      ┆ 2          │
├╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌┤
│ src/widgets/index.ts ┆ 1      ┆ 1          │
└──────────────────────┴────────┴────────────┘

Fan-out (pulls in the most)
┌──────────────────────┬────────┬────────────┐
│ module               ┆ direct ┆ transitive │
╞══════════════════════╪════════╪════════════╡
│ src/main.ts          ┆ 1      ┆ 4          │
├╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌┤
│ src/widgets/index.ts ┆ 3      ┆ 3          │
└──────────────────────┴────────┴────────────┘

1 barrel(s) classified, 1 of them imported

Barrel amplification
┌──────────────────────┬───────┬──────┬────────┬───────┬──────┬────────────┐
│ barrel               ┆ sites ┆ cost ┆ excess ┆ worst ┆ amp  ┆ rewritable │
╞══════════════════════╪═══════╪══════╪════════╪═══════╪══════╪════════════╡
│ src/widgets/index.ts ┆ 2     ┆ 4    ┆ 0      ┆ 0     ┆ 1.0× ┆ 0/0        │
└──────────────────────┴───────┴──────┴────────┴───────┴──────┴────────────┘

No entrypoints configured — set `entrypoints` in unstave.toml to see the projected per-entrypoint saving.

discovery 0ms · parse 0ms · resolve 0ms · total 0ms
