crates/unstave-report/tests/snapshots/terminal_renderer__report_monorepo.snap
---
source: crates/unstave-report/tests/terminal_renderer.rs
expression: rendered
---
┌───────────────────────┬───────┐
│ metric                ┆ value │
╞═══════════════════════╪═══════╡
│ files analyzed        ┆ 4     │
├╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌┤
│ packages              ┆ 4     │
├╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌┤
│ modules               ┆ 4     │
├╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌┤
│ edges                 ┆ 3     │
├╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌┤
│ external packages     ┆ 0     │
├╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌┤
│ unresolved specifiers ┆ 0     │
├╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌┤
│ cycles                ┆ 0     │
├╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌┤
│ dead exports          ┆ 1     │
└───────────────────────┴───────┘

No cycles.

Dead exports
┌──────────────────────┬────────┬────────────┐
│ module               ┆ export ┆ confidence │
╞══════════════════════╪════════╪════════════╡
│ apps/web/src/main.ts ┆ app    ┆ high       │
└──────────────────────┴────────┴────────────┘

Fan-in (most depended upon)
┌─────────────────────────────┬────────┬────────────┐
│ module                      ┆ direct ┆ transitive │
╞═════════════════════════════╪════════╪════════════╡
│ packages/ui/src/theme.ts    ┆ 1      ┆ 2          │
├╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌┤
│ packages/utils/src/index.ts ┆ 1      ┆ 2          │
├╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌┤
│ packages/ui/src/index.ts    ┆ 1      ┆ 1          │
└─────────────────────────────┴────────┴────────────┘

Fan-out (pulls in the most)
┌──────────────────────────┬────────┬────────────┐
│ module                   ┆ direct ┆ transitive │
╞══════════════════════════╪════════╪════════════╡
│ apps/web/src/main.ts     ┆ 1      ┆ 3          │
├╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌┤
│ packages/ui/src/index.ts ┆ 2      ┆ 2          │
└──────────────────────────┴────────┴────────────┘

0 barrel(s) classified, 0 of them imported

No barrel imports to report — nothing is importing through a barrel.

No entrypoints configured — set `entrypoints` in unstave.toml to see the projected per-entrypoint saving.

discovery 0ms · parse 0ms · resolve 0ms · total 0ms
