crates/unstave-report/tests/snapshots/terminal_renderer__report_nested-barrels.snap
---
source: crates/unstave-report/tests/terminal_renderer.rs
expression: rendered
---
┌───────────────────────┬───────┐
│ metric                ┆ value │
╞═══════════════════════╪═══════╡
│ files analyzed        ┆ 7     │
├╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌┤
│ packages              ┆ 1     │
├╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌┤
│ modules               ┆ 7     │
├╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌┤
│ edges                 ┆ 6     │
├╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌┤
│ external packages     ┆ 0     │
├╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌┤
│ unresolved specifiers ┆ 0     │
├╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌┤
│ cycles                ┆ 0     │
├╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌┤
│ dead exports          ┆ 3     │
└───────────────────────┴───────┘

No cycles.

Dead exports
┌────────────────────┬────────┬────────────────────────────────────────────────────┐
│ module             ┆ export ┆ confidence                                         │
╞════════════════════╪════════╪════════════════════════════════════════════════════╡
│ src/a/b/c/three.ts ┆ three  ┆ low — touched by export */namespace/dynamic import │
├╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┤
│ src/a/b/c/two.ts   ┆ two    ┆ low — touched by export */namespace/dynamic import │
├╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┤
│ src/main.ts        ┆ used   ┆ high                                               │
└────────────────────┴────────┴────────────────────────────────────────────────────┘

Fan-in (most depended upon)
┌────────────────────┬────────┬────────────┐
│ module             ┆ direct ┆ transitive │
╞════════════════════╪════════╪════════════╡
│ src/a/b/c/one.ts   ┆ 1      ┆ 4          │
├╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌┤
│ src/a/b/c/three.ts ┆ 1      ┆ 4          │
├╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌┤
│ src/a/b/c/two.ts   ┆ 1      ┆ 4          │
├╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌┤
│ src/a/b/c/index.ts ┆ 1      ┆ 3          │
├╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌┤
│ src/a/b/index.ts   ┆ 1      ┆ 2          │
├╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌┤
│ src/a/index.ts     ┆ 1      ┆ 1          │
└────────────────────┴────────┴────────────┘

Fan-out (pulls in the most)
┌────────────────────┬────────┬────────────┐
│ module             ┆ direct ┆ transitive │
╞════════════════════╪════════╪════════════╡
│ src/main.ts        ┆ 1      ┆ 6          │
├╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌┤
│ src/a/index.ts     ┆ 1      ┆ 5          │
├╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌┤
│ src/a/b/index.ts   ┆ 1      ┆ 4          │
├╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌┤
│ src/a/b/c/index.ts ┆ 3      ┆ 3          │
└────────────────────┴────────┴────────────┘

3 barrel(s) classified, 1 of them imported

Barrel amplification
┌────────────────┬───────┬──────┬────────┬───────┬──────┬────────────┐
│ barrel         ┆ sites ┆ cost ┆ excess ┆ worst ┆ amp  ┆ rewritable │
╞════════════════╪═══════╪══════╪════════╪═══════╪══════╪════════════╡
│ src/a/index.ts ┆ 1     ┆ 6    ┆ 5      ┆ 5     ┆ 6.0× ┆ 1/1        │
└────────────────┴───────┴──────┴────────┴───────┴──────┴────────────┘

Worst import sites
┌──────────────────────────────┬─────────┬────────┬─────────┬────────┐
│ import site                  ┆ symbols ┆ actual ┆ minimal ┆ excess │
╞══════════════════════════════╪═════════╪════════╪═════════╪════════╡
│ src/main.ts → src/a/index.ts ┆ one     ┆ 6      ┆ 1       ┆ 5      │
└──────────────────────────────┴─────────┴────────┴─────────┴────────┘

No entrypoints configured — set `entrypoints` in unstave.toml to see the projected per-entrypoint saving.

discovery 0ms · parse 0ms · resolve 0ms · total 0ms
