crates/unstave-report/tests/snapshots/terminal_renderer__report_pure-barrel.snap
---
source: crates/unstave-report/tests/terminal_renderer.rs
expression: rendered
---
┌───────────────────────┬───────┐
│ metric                ┆ value │
╞═══════════════════════╪═══════╡
│ files analyzed        ┆ 7     │
├╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌┤
│ packages              ┆ 1     │
├╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌┤
│ modules               ┆ 7     │
├╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌┤
│ edges                 ┆ 6     │
├╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌┤
│ external packages     ┆ 0     │
├╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌┤
│ unresolved specifiers ┆ 0     │
├╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌┤
│ cycles                ┆ 0     │
├╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌┤
│ dead exports          ┆ 5     │
└───────────────────────┴───────┘

No cycles.

Dead exports
┌────────────────────────┬───────────────┬────────────┐
│ module                 ┆ export        ┆ confidence │
╞════════════════════════╪═══════════════╪════════════╡
│ src/clients/beta.ts    ┆ BetaClient    ┆ high       │
├╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌┤
│ src/clients/delta.ts   ┆ DeltaClient   ┆ high       │
├╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌┤
│ src/clients/epsilon.ts ┆ EpsilonClient ┆ high       │
├╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌┤
│ src/clients/gamma.ts   ┆ GammaClient   ┆ high       │
├╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌┤
│ src/main.ts            ┆ client        ┆ high       │
└────────────────────────┴───────────────┴────────────┘

Fan-in (most depended upon)
┌────────────────────────┬────────┬────────────┐
│ module                 ┆ direct ┆ transitive │
╞════════════════════════╪════════╪════════════╡
│ src/clients/alpha.ts   ┆ 1      ┆ 2          │
├╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌┤
│ src/clients/beta.ts    ┆ 1      ┆ 2          │
├╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌┤
│ src/clients/delta.ts   ┆ 1      ┆ 2          │
├╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌┤
│ src/clients/epsilon.ts ┆ 1      ┆ 2          │
├╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌┤
│ src/clients/gamma.ts   ┆ 1      ┆ 2          │
├╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌┤
│ src/clients/index.ts   ┆ 1      ┆ 1          │
└────────────────────────┴────────┴────────────┘

Fan-out (pulls in the most)
┌──────────────────────┬────────┬────────────┐
│ module               ┆ direct ┆ transitive │
╞══════════════════════╪════════╪════════════╡
│ src/main.ts          ┆ 1      ┆ 6          │
├╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌┤
│ src/clients/index.ts ┆ 5      ┆ 5          │
└──────────────────────┴────────┴────────────┘

1 barrel(s) classified, 1 of them imported

Barrel amplification
┌──────────────────────┬───────┬──────┬────────┬───────┬──────┬────────────┐
│ barrel               ┆ sites ┆ cost ┆ excess ┆ worst ┆ amp  ┆ rewritable │
╞══════════════════════╪═══════╪══════╪════════╪═══════╪══════╪════════════╡
│ src/clients/index.ts ┆ 1     ┆ 6    ┆ 5      ┆ 5     ┆ 6.0× ┆ 1/1        │
└──────────────────────┴───────┴──────┴────────┴───────┴──────┴────────────┘

Worst import sites
┌────────────────────────────────────┬─────────────┬────────┬─────────┬────────┐
│ import site                        ┆ symbols     ┆ actual ┆ minimal ┆ excess │
╞════════════════════════════════════╪═════════════╪════════╪═════════╪════════╡
│ src/main.ts → src/clients/index.ts ┆ AlphaClient ┆ 6      ┆ 1       ┆ 5      │
└────────────────────────────────────┴─────────────┴────────┴─────────┴────────┘

No entrypoints configured — set `entrypoints` in unstave.toml to see the projected per-entrypoint saving.

discovery 0ms · parse 0ms · resolve 0ms · total 0ms
