crates/unstave-report/tests/snapshots/terminal_renderer__report_simple.snap
---
source: crates/unstave-report/tests/terminal_renderer.rs
expression: rendered
---
┌───────────────────────┬───────┐
│ metric                ┆ value │
╞═══════════════════════╪═══════╡
│ files analyzed        ┆ 3     │
├╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌┤
│ packages              ┆ 1     │
├╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌┤
│ modules               ┆ 3     │
├╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌┤
│ edges                 ┆ 2     │
├╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌┤
│ external packages     ┆ 0     │
├╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌┤
│ unresolved specifiers ┆ 0     │
├╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌┤
│ cycles                ┆ 0     │
├╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌┤
│ dead exports          ┆ 3     │
└───────────────────────┴───────┘

No cycles.

Dead exports
┌─────────────┬─────────┬────────────┐
│ module      ┆ export  ┆ confidence │
╞═════════════╪═════════╪════════════╡
│ src/main.ts ┆ message ┆ high       │
├╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌┤
│ src/main.ts ┆ reader  ┆ high       │
├╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌┤
│ src/main.ts ┆ result  ┆ high       │
└─────────────┴─────────┴────────────┘

Fan-in (most depended upon)
┌──────────────┬────────┬────────────┐
│ module       ┆ direct ┆ transitive │
╞══════════════╪════════╪════════════╡
│ src/greet.ts ┆ 1      ┆ 1          │
├╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌┤
│ src/math.ts  ┆ 1      ┆ 1          │
└──────────────┴────────┴────────────┘

Fan-out (pulls in the most)
┌─────────────┬────────┬────────────┐
│ module      ┆ direct ┆ transitive │
╞═════════════╪════════╪════════════╡
│ src/main.ts ┆ 2      ┆ 2          │
└─────────────┴────────┴────────────┘

0 barrel(s) classified, 0 of them imported

No barrel imports to report — nothing is importing through a barrel.

No entrypoints configured — set `entrypoints` in unstave.toml to see the projected per-entrypoint saving.

discovery 0ms · parse 0ms · resolve 0ms · total 0ms
